--- a/frontend/ChatSiteUFPI/src/components/Chat/Chat.css
+++ b/frontend/ChatSiteUFPI/src/components/Chat/Chat.css
@@ -2,11 +2,13 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #e9ecef; /* Cor de fundo da página */
     margin: 0;
-    padding: 0; /* Remover padding do body */
+    padding: 0;
     display: flex; /* Usar flexbox para centralizar */
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
     height: 100vh; /* Altura total da viewport */
+    color: #333; /* Cor do texto mais escura para melhor contraste */
+    font-size: 16px; /* Aumenta o tamanho da fonte */
 }
 
 .chat-container {
@@ -19,19 +21,18 @@ body {
     padding: 10px;
     background-color: #ffffff; /* Cor de fundo do container */
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Sombra mais pronunciada */
-    border-radius: 10px; /* Bordas mais arredondadas */
 }
 
 .messages {
     flex: 1;
     overflow-y: auto;
-    max-height: 400px;
-    margin-bottom: 10px;
+    max-height: 300px; /* Ajuste a altura se necessário */
     padding: 10px;
     border: none; /* Remover borda */
     border-radius: 5px;
     background-color: #f8f9fa; /* Fundo das mensagens */
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra interna suave */
+    scroll-behavior: smooth; /* Adiciona um efeito de rolagem suave */
 }
 
 .message {
@@ -41,6 +42,7 @@ body {
     line-height: 1.5; /* Espaçamento entre linhas */
     max-width: 80%; /* Largura máxima das mensagens */
     position: relative; /* Para usar com pseudo-elementos */
+    font-size: 14px; /* Tamanho da fonte das mensagens */
 }
 
 .user {
